Fix overflow body

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -38,6 +38,7 @@ body {
   font-size: 1.6rem;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
+  overflow-x: hidden;
 }
 
 a {
